# alang

./: .gitignore  LICENSE  Makefile  README.md  alang.y  pyproject.toml
.github/workflows/: build.yaml
src/alang/: __init__.py  compiler.py  expressions.py  exprs.py  funcs.py  functions.py  lang.py  mods.py  modules.py  nodes.py  parser.py  stmts.py  types.py  typs.py  vals.py  wgsl.py  writer.py
src/alang/langs/: __init__.py  a.py  a.y  a_parser.py  c.py  glsl.py  html.py  html_dev.py  js.py  language.py  metal.py  py.skel  swift.py  wgsl.py  writer.py
src/alang/languages/: __init__.py  a.py  alang.py  language.py  wgsl.py  writer.py
tests/: test_arrays.py  test_exprs.py  test_funcs.py  test_html.py  test_js.py  test_nodes.py  test_structs.py  test_tensor.py  test_type_inference.py
